[tool.poetry]
name = "smith-stub-calc"
version = "0.1.0"
description = ""
authors = ["kosugor <kosuticg76@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
matplotlib = "^3.5.2"
PyQt5 = "^5.15.6"
scipy ="^1.9"
scikit-rf = "^0.22.1"
numpy ="<1.20"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
